samples and images

--- a/NASA Rover Images Post-Processing - DEBAYERING.ipynb
+++ b/NASA Rover Images Post-Processing - DEBAYERING.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "hourly-barrel",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:42:14.392927Z",
-     "start_time": "2021-03-15T10:42:14.386943Z"
+     "end_time": "2021-03-16T15:41:14.420501Z",
+     "start_time": "2021-03-16T15:41:12.779228Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "civil-biography",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:20.541077Z",
-     "start_time": "2021-03-15T10:20:20.500078Z"
+     "end_time": "2021-03-16T15:41:14.460493Z",
+     "start_time": "2021-03-16T15:41:14.424507Z"
     }
    },
    "outputs": [],
@@ -72,8 +72,8 @@
    "id": "separated-lighting",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:20.549079Z",
-     "start_time": "2021-03-15T10:20:20.545095Z"
+     "end_time": "2021-03-16T15:41:14.467487Z",
+     "start_time": "2021-03-16T15:41:14.463483Z"
     }
    },
    "outputs": [],
@@ -88,8 +88,8 @@
    "id": "unexpected-composite",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:20.607086Z",
-     "start_time": "2021-03-15T10:20:20.552077Z"
+     "end_time": "2021-03-16T15:41:14.529544Z",
+     "start_time": "2021-03-16T15:41:14.470488Z"
     }
    },
    "outputs": [],
@@ -104,8 +104,8 @@
    "id": "living-password",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:20.619079Z",
-     "start_time": "2021-03-15T10:20:20.610080Z"
+     "end_time": "2021-03-16T15:41:14.542488Z",
+     "start_time": "2021-03-16T15:41:14.532503Z"
     }
    },
    "outputs": [
@@ -127,8 +127,8 @@
    "id": "established-receipt",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:21.790099Z",
-     "start_time": "2021-03-15T10:20:20.623076Z"
+     "end_time": "2021-03-16T15:41:15.685492Z",
+     "start_time": "2021-03-16T15:41:14.545485Z"
     }
    },
    "outputs": [
@@ -163,8 +163,8 @@
    "id": "democratic-mixture",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:21.800081Z",
-     "start_time": "2021-03-15T10:20:21.795079Z"
+     "end_time": "2021-03-16T15:41:15.698508Z",
+     "start_time": "2021-03-16T15:41:15.691487Z"
     }
    },
    "outputs": [],
@@ -181,8 +181,8 @@
    "id": "compressed-needle",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:22.785160Z",
-     "start_time": "2021-03-15T10:20:21.803078Z"
+     "end_time": "2021-03-16T15:41:16.758019Z",
+     "start_time": "2021-03-16T15:41:15.703502Z"
     }
    },
    "outputs": [],
@@ -198,8 +198,8 @@
    "id": "resistant-greeting",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:22.793078Z",
-     "start_time": "2021-03-15T10:20:22.788095Z"
+     "end_time": "2021-03-16T15:41:16.764913Z",
+     "start_time": "2021-03-16T15:41:16.761016Z"
     }
    },
    "outputs": [
@@ -221,8 +221,8 @@
    "id": "unlimited-chicken",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:23.842624Z",
-     "start_time": "2021-03-15T10:20:22.798078Z"
+     "end_time": "2021-03-16T15:41:17.831532Z",
+     "start_time": "2021-03-16T15:41:16.767900Z"
     }
    },
    "outputs": [
@@ -261,47 +261,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "increased-music",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:24.036624Z",
-     "start_time": "2021-03-15T10:20:18.677Z"
+     "end_time": "2021-03-16T15:43:26.159828Z",
+     "start_time": "2021-03-16T15:43:26.153828Z"
     }
    },
    "outputs": [],
    "source": [
-    "input_folder = 'cache/perseverance'\n",
-    "output_folder = 'processed/perseverance'"
+    "input_folder = 'cache/curiosity'\n",
+    "output_folder = 'processed/curiosity/3042MR'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "behavioral-hotel",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:24.038624Z",
-     "start_time": "2021-03-15T10:20:18.683Z"
+     "end_time": "2021-03-16T15:43:26.478368Z",
+     "start_time": "2021-03-16T15:43:26.473364Z"
     }
    },
    "outputs": [],
    "source": [
-    "files_pattern = 'N?E_*.png'"
+    "files_pattern = '3042MR*.png'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ranging-syndrome",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-03-15T10:20:24.040624Z",
-     "start_time": "2021-03-15T10:20:18.685Z"
+     "end_time": "2021-03-16T15:45:24.396111Z",
+     "start_time": "2021-03-16T15:43:27.051493Z"
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 100, Processed 100\n"
+     ]
+    }
+   ],
    "source": [
     "total_files = 0\n",
     "total_processed = 0\n",
@@ -322,6 +330,7 @@
     "        ic.debayer_image(\n",
     "            path=os.path.abspath(file),\n",
     "            dest=os.path.abspath(processed_file_path),\n",
+    "            crop=1,\n",
     "            mode='rggb')\n",
     "        \n",
     "        total_processed += 1\n",
